# fastapi-vuejs-template

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml
.cursor/rules/: backend.mdc  frontend.mdc  project.mdc
.github/workflows/: ci.yml
client/: Dockerfile  eslint.config.ts  package-lock.json  package.json  vitest.config.ts
client/src/: App.vue
client/src/api/: auth.ts  client.ts
client/src/assets/: auth.css
client/src/layouts/: DefaultLayout.vue
client/src/router/: index.ts
client/src/stores/: auth.ts
client/src/stores/__tests__/: auth.test.ts
client/src/views/: DashboardView.vue  LoginView.vue  NotFoundView.vue  RegisterView.vue
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf  nginx.dev.conf
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  startup.sh
server/alembic/: env.py
server/alembic/versions/: 64cd4beb4a5a_users.py
server/scripts/: create_user.py  make_superuser.py
server/src/: main.py
server/src/api/: router.py  users.py
server/src/api/endpoints/: health.py
server/src/core/: auth.py  config.py  database.py  exceptions.py  metrics.py  middleware.py
server/src/models/postgres/: __init__.py  users.py
server/src/repositories/: users.py
server/src/schemas/: users.py
server/tests/: conftest.py
server/tests/api/: test_auth.py  test_health.py  test_users.py
server/tests/core/: test_exceptions.py  test_middleware.py
(+2 files in other folders)
